styles/style.scss
/* ... */
@keyframes slideLeft {
    from { transform: translate(-100vw,0)}
    to { transform: translate(0,0)}   
   }


//Single restaurant section
article {
    //Parent styles
    min-height: 76.72vh;
    animation-name: slideLeft;
    animation-duration: 1.5s;
    color: $mainColor;
    padding: 2em;
    display: none;

    //Main container for restaurant
    .restaurantContainer {
        padding: 1.7em;
        margin: auto;
        background: rgba(0, 0, 0, 0.3);
        position: relative;
        max-width: 65vw;
        display: grid;
        // grid-gap: 0.8em;
        //Add span styles to position
        span {
            display: block;
        }
        //Container for first section
        #restaurantFirst {
            display: grid;
            grid-gap: 1.5em;
            .restaurantInfo {
                display: flex;
            }
            //Header of the restaurant
            .restaurantIntro {
                display: flex;
                width: auto;
                flex-direction: column;
                padding: 0em 0 1em 1em;
                //Restaurant adress and name style
                .restaurantName {
                    font-weight: bold;
                    color: $favListBg;
                    font-size: 1.4rem;
                    margin-bottom: 1em;
                    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
                }
                .restaurantAdress {
                    font-size: 1.1em;
                    width: 70%;
                    color: $favListBg;
                    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
                }
            }
            //Restaurant image
            .restaurantImg {
                height: 15vw;
                width: auto;
                box-shadow: -1px 2px 3px 3px rgba(0, 0, 0, 0.35);
            }
            //Style when there's not aviable reviews
            .noRevFound {
                display: flex;
                justify-content: center;
                align-items: center;
                font-weight: bold;
                color: $mainColor;
                justify-content: center;
                align-items: center;
                font-size: 1.3em;
                text-align: center;
                letter-spacing: 0.1em;
            }
            //Information about restaurant - average
            .restaurantAvg {
                display: grid;
                // background: $favListBg;
                background: rgba(255, 255, 255, 0.911);
                box-shadow: -1px 2px 3px 3px rgba(0, 0, 0, 0.35);
                padding: 0.5em;
                .restaurantAvgRating,
                .restaurantAvgCost {
                    span {
                        font-weight: bold;
                    }
                }
            }
            //Button to display reviews style
            .displayReviews {
                height: 4vh;
                border: 2px solid $buttonBg;
                padding: 0.2em 0.8em;
                font-size: 1em;
                font-family: $mainFont;
                font-weight: bold;
                color: white;
                cursor: pointer;
                outline: none;
                // background: linear-gradient(to right, $bodyBg 50%, $favListBg 50%);
                background: rgba(255, 255, 255, 0.2);
                background-size: 200% 100%;
                background-position: bottom right;
                transition: all .5s ease-out;
                margin: 0 auto;
                max-width: 18em;
                &:hover {
                    color: $mainColor;
                    background-color: $bodyBg;
                    background-position: bottom left;
                }
            }
        }
        //Reviews container
        .restaurantSpecificInfo {
            display: none;
            //Reviews container
            .reviews {
                display: grid;
                grid-gap: 0.8em;
                //Title of the section
                .reviewsTitle {
                    color: $favListBg;
                    font-weight: bold;
                    font-size: 1.2em;
                }
                //Single review style
                .singleReview {
                    display: grid;
                    background: $favListBg;
                    box-shadow: -1px 2px 3px 3px rgba(0, 0, 0, 0.35);
                    padding: 0.5em;
                }
            }
        }
    }
}

//Footer style
footer {
    color: $mainFont;
    background: rgb(204, 211, 13);
    height: 6vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: bold;
    font-size: 0.7em;
}

//Fav add/remove button global styles
.starFav {
    font-size: 1.2rem;
    transform: translateY(-0.5rem);
    height: 2.2rem;
    // border: 1px red solid;
    &:hover {
        cursor: pointer;
    }
    &::before {
        content: '★';
        font-size: 1.8em;
        line-height: 1.2em;
        letter-spacing: 0.2em;
        color: $starsBg;
    }
    &:checked~::before {
        color: $bodyBg;
    }
}

.cross{
    font-size: 1.3em;
    color: $favListBg;
    margin-left: auto;
    height: 1.4em;
    display: flex;
    align-self: start;
    cursor: pointer;
    font-weight: bold;
    
}

.starFavInput {
    visibility: hidden;
    &:checked~::before {
        color: $bodyBg;
    }
}


.addFav{
    height: 100%;
    grid-row: 1 / 4;
    grid-column: 2;
    display: flex;
    justify-content: center;
    align-items: center;
  }


/* Media queries */

@media only screen and (max-width: 510px) {
     :root {
        font-size: 15px;
    }
    .restaurantImg {
        display: none;
    }
}
/* ... */

